Fix the issues of rbac management apis.
