# docs/swagger.json
@@ -22,9 +22,9 @@
     "paths": {
         "/api/v1/rbac/grouping/add": {
             "post": {
-                "description": "new a group (role-member) policy",
+                "description": "new a group (member-role) policy",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -36,14 +36,75 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Subject",
-                        "name": "subject",
+                        "description": "Member",
+                        "name": "member",
                         "in": "formData"
                     },
                     {
                         "type": "string",
-                        "description": "Object",
-                        "name": "object",
+                        "description": "Role",
+                        "name": "role",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/rbac/grouping/delete": {
+            "delete": {
+                "description": "delete a single policy (remove role of member)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "privilege"
+                ],
+                "summary": "Delete RBAC Single Grouping Policy (Remove Role of Member)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Member",
+                        "name": "member",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Role",
+                        "name": "role",
                         "in": "formData"
                     }
                 ],
@@ -82,7 +143,7 @@
             }
         },
         "/api/v1/rbac/grouping/{name}/delete": {
-            "post": {
+            "delete": {
                 "description": "delete a grouping policy (member)",
                 "consumes": [
                     "application/json"
@@ -240,11 +301,58 @@
                 }
             }
         },
+        "/api/v1/rbac/policies": {
+            "get": {
+                "description": "show all policies defined in the server",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "privilege"
+                ],
+                "summary": "List All Policies",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/rbac/policy/add": {
             "post": {
                 "description": "new a role/policy",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -308,10 +416,10 @@
             }
         },
         "/api/v1/rbac/policy/delete": {
-            "post": {
+            "delete": {
                 "description": "delete a single policy",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -375,7 +483,7 @@
             }
         },
         "/api/v1/rbac/policy/{name}/delete": {
-            "post": {
+            "delete": {
                 "description": "delete a policy (role)",
                 "consumes": [
                     "application/json"
